# SPRIA

./: .gitignore  README.md
ADRs/: FaceRecognitionModule.md
API/: api.py  helpers.py  registerFace.py  requirements.txt
App/API/: api.py  registerFace.py  requirements.txt
App/API/templates/: root.html
App/Server/: requirements.txt
Client/: Client.cpp
Client/Test/: compile_tests.sh  tcp_async_client.cpp  tcp_async_server.cpp  tcp_client.cpp  tcp_server.cpp
Diagramas/: diagrama_contexto.drawio
Docs/: ADD_WEBCAM_TO_WSL.md  CMakeLists.txt
Docs/ADRs/: template.md
FaceDetectionModule/: CMakeLists.txt  FaceDetectionModule.cpp
FaceRecognitionModule/: CMakeLists.txt  FaceRecognition  FaceRecognitionModule.cpp  docker-compose.yml  start.sh  stop.sh
FaceRecognitionModule/base64/test/: test  test.cpp  test.sh
FaceRecognitionModule/base64/test/base64_encodings/: person_1.txt  person_2.txt  person_3.jpg_code.txt  person_3.txt
FaceRecognitionModule/import/: create_schema.sh  import_images.sh
Modules/FaceDetectionModule/: CMakeLists.txt  FaceDetectionModule.cpp
Modules/FaceFeatureExtractionModule/: CMakeLists.txt  FaceFeatureExtractionModule.cpp
Modules/FaceRecognitionModule/: CMakeLists.txt  FaceRecognition  build.sh
Modules/FaceRecognitionModule/base64/: CMakeLists.txt  base64.cpp  base64.h
SPRIA/Client/: CMakeLists.txt
SPRIA/Client/Test/: tcp_async_client.cpp
Server/: requirements.txt  server.py
